@@ -9,6 +9,7 @@ Bugs:
 - 3043288: XML generated with VALUE.ARRAY for ref arrays
 - 3043282: XML gen for embedded instances for invokeMethod is incorrect
 - 3059060: 'struct _CIMCArgsFT' not defined in cimc/cimcft.h
+- 2348900: Concurrency issue when parsing responses
 
 Changes in 2.2.1
 ================
