@@ -1,3 +1,8 @@
+2011-01-13  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* backend/cimxml/cimXmlParser.c:
+	[ 2348900 ] Concurrency issue when parsing responses
+
 2010-09-27  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* backend/cimxml/client.c:
